objects/Enrollment_History__c.object
<CustomObject>
    <fields>
        <fullName>Account_Number__c</fullName>
        <description>Nasco number</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Account Number</label>
        <length>7</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Contracts__c</fullName>
        <label>Contracts</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Enrl_Rpt_Dt__c</fullName>
        <formula>DATEVALUE( 
TEXT(YEAR(DATEVALUE(TEXT(DATEVALUE(LEFT(Rpt_Dt__c,4)+ "-" + RIGHT(Rpt_Dt__c,2) + "-1" ) -1)) + 35)) + "-" + 
TEXT(MONTH(DATEVALUE(TEXT(DATEVALUE(LEFT(Rpt_Dt__c,4)+ "-" + RIGHT(Rpt_Dt__c,2) + "-1" ) -1)) + 35)) + "-1" 
) -1</formula>
        <label>Enrl Rpt Dt</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipName>Enrollment_History</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Processed_Type__c</fullName>
        <description>Identifies if the record was from the Medical (M) or the Ancillary (A) file</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Processed Type</label>
        <length>1</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Product</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Risk__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Risk</label>
        <length>10</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Rpt_Dt__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Rpt_Dt</label>
        <length>6</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Run_Dt__c</fullName>
        <description>Date that the import file was created</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Run Dt</label>
        <length>23</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>System</label>
        <length>25</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <description>This object holds the actual enrollment history data which is associated to the opportunity</description>
    <label>Enrollment History</label>
    <nameField>
        <displayFormat>E-{00000}</displayFormat>
        <label>Enrollments History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Enrollment History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>